--- a/YouTMusic/YouTMusic/LoginViewController.xib
+++ b/YouTMusic/YouTMusic/LoginViewController.xib
@@ -8,17 +8,18 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="LoginViewController" customModule="YouTMusic" customModuleProvider="target">
             <connections>
+                <outlet property="btnLogin" destination="nxJ-qe-yxq" id="E7r-eW-LmV"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="481" height="469"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="470"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nxJ-qe-yxq">
-                    <rect key="frame" x="-2" y="-3" width="485" height="55"/>
+                    <rect key="frame" x="-2" y="-3" width="484" height="55"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="cmJ-2D-REH"/>
                     </constraints>
@@ -28,7 +29,7 @@
                     </buttonCell>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="VPn-Gc-EVG">
-                    <rect key="frame" x="18" y="235" width="369" height="84"/>
+                    <rect key="frame" x="18" y="236" width="369" height="84"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Never Sleeps" id="z0B-9X-K86">
                         <font key="font" metaFont="systemUltraLight" size="70"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -36,7 +37,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mTw-f6-5hM">
-                    <rect key="frame" x="18" y="319" width="207" height="95"/>
+                    <rect key="frame" x="18" y="320" width="207" height="95"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Music" id="TEN-tI-s64">
                         <font key="font" metaFont="system" size="80"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
