--- a/YouTMusic/YouTMusic/FeedViewController.xib
+++ b/YouTMusic/YouTMusic/FeedViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,17 +14,17 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="770"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="668"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1S-VG-o34" userLabel="ScrollView - YouTMusic Collection View">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="770"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="624"/>
                     <clipView key="contentView" drawsBackground="NO" id="NTk-Aq-IpI">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="770"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="624"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView id="eOB-ep-rXI" customClass="YouTMusicCollectionView" customModule="YouTMusic" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="158"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="624"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="Nhn-aa-uGU">
                                     <size key="itemSize" width="50" height="50"/>
@@ -37,17 +37,17 @@
                         <rect key="frame" x="-100" y="-100" width="233" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="pah-pk-dlS">
-                        <rect key="frame" x="234" y="1" width="15" height="143"/>
+                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="pah-pk-dlS">
+                        <rect key="frame" x="358" y="1" width="16" height="622"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
             </subviews>
             <constraints>
-                <constraint firstItem="j1S-VG-o34" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="FAB-us-Qeg"/>
                 <constraint firstAttribute="trailing" secondItem="j1S-VG-o34" secondAttribute="trailing" id="YbY-0M-EKo"/>
                 <constraint firstItem="j1S-VG-o34" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="ehq-PK-JO4"/>
                 <constraint firstAttribute="bottom" secondItem="j1S-VG-o34" secondAttribute="bottom" id="fmL-18-GKc"/>
+                <constraint firstItem="j1S-VG-o34" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="44" id="g0B-hF-Ira"/>
             </constraints>
             <point key="canvasLocation" x="137" y="257"/>
         </customView>
