--- a/YouTMusic/YouTMusic/NewestSongCell.xib
+++ b/YouTMusic/YouTMusic/NewestSongCell.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
         <capability name="system font weights other than Regular or Bold" minToolsVersion="7.0"/>
     </dependencies>
@@ -18,43 +17,43 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="125"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eeF-Nr-j1g">
-                    <rect key="frame" x="218" y="59" width="248" height="26"/>
+                    <rect key="frame" x="218" y="59" width="143" height="26"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Vỡ Tan Mất Rồi" id="QTQ-fH-87E">
                         <font key="font" size="17" name="HelveticaNeue-Medium"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="controlLightHighlightColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="i0J-oy-kRt">
-                    <rect key="frame" x="218" y="31" width="248" height="19"/>
+                    <rect key="frame" x="218" y="30" width="143" height="19"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Hà Anh Tuấn" id="eaN-Qz-d6n">
                         <font key="font" metaFont="systemLight" size="15"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="controlLightHighlightColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WUM-nY-8ol">
                     <rect key="frame" x="20" y="20" width="170" height="85"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="85" id="Huq-iM-Bwj"/>
-                        <constraint firstAttribute="width" constant="170" id="q3F-qj-vbL"/>
+                        <constraint firstAttribute="width" constant="170" id="gX6-U7-FvG"/>
+                        <constraint firstAttribute="height" constant="85" id="pMK-rr-hC1"/>
                     </constraints>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="topLeft" imageScaling="axesIndependently" image="maxresdefault" id="MFr-Gf-xI4"/>
                 </imageView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="i0J-oy-kRt" secondAttribute="trailing" constant="16" id="7it-hY-esr"/>
-                <constraint firstItem="WUM-nY-8ol" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="7li-st-RtT"/>
-                <constraint firstItem="i0J-oy-kRt" firstAttribute="leading" secondItem="WUM-nY-8ol" secondAttribute="trailing" constant="30" id="GtD-WA-CZK"/>
-                <constraint firstItem="eeF-Nr-j1g" firstAttribute="top" secondItem="WUM-nY-8ol" secondAttribute="top" multiplier="4:2" id="R66-yn-Qhm"/>
-                <constraint firstItem="i0J-oy-kRt" firstAttribute="bottom" secondItem="WUM-nY-8ol" secondAttribute="bottom" multiplier="0.9" id="i70-l6-5og"/>
-                <constraint firstItem="eeF-Nr-j1g" firstAttribute="leading" secondItem="WUM-nY-8ol" secondAttribute="trailing" constant="30" id="teE-dQ-8fR"/>
-                <constraint firstItem="WUM-nY-8ol" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="xNi-wC-apB"/>
-                <constraint firstAttribute="trailing" secondItem="eeF-Nr-j1g" secondAttribute="trailing" constant="16" id="xR1-VE-YJR"/>
+                <constraint firstItem="eeF-Nr-j1g" firstAttribute="leading" secondItem="WUM-nY-8ol" secondAttribute="trailing" constant="30" id="AJo-Tx-Adm"/>
+                <constraint firstItem="WUM-nY-8ol" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="FVM-Be-if3"/>
+                <constraint firstItem="i0J-oy-kRt" firstAttribute="top" secondItem="eeF-Nr-j1g" secondAttribute="bottom" constant="10" id="PXf-90-Udk"/>
+                <constraint firstItem="eeF-Nr-j1g" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="40" id="b4e-3I-4Td"/>
+                <constraint firstItem="i0J-oy-kRt" firstAttribute="leading" secondItem="WUM-nY-8ol" secondAttribute="trailing" constant="30" id="dDc-ZS-qH3"/>
+                <constraint firstItem="WUM-nY-8ol" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="es5-sg-LHo"/>
+                <constraint firstAttribute="trailing" secondItem="eeF-Nr-j1g" secondAttribute="trailing" constant="16" id="rPE-To-GkM"/>
+                <constraint firstAttribute="trailing" secondItem="i0J-oy-kRt" secondAttribute="trailing" constant="16" id="yJ2-fg-a3J"/>
             </constraints>
             <point key="canvasLocation" x="139" y="-236.5"/>
         </customView>
